--- a/package.json
+++ b/package.json
@@ -3,26 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.0",
     "antd": "^4.2.2",
-    "babel-plugin-import": "^1.13.0",
-    "customize-cra": "^0.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "test": "react-app-rewired test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +29,21 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.1.6"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.38",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "astroturf": "^0.10.4",
+    "customize-cra": "^0.9.1",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "less-vars-to-js": "^1.3.0",
+    "node-sass": "^4.14.1",
+    "react-app-rewired": "^2.1.6",
+    "typescript": "^3.7.5",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
