--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
+    "@types/react-router-dom": "^5.1.5",
     "antd": "^4.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -36,6 +41,8 @@
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.7",
+    "@types/react-transition-group": "^4.2.4",
     "astroturf": "^0.10.4",
     "customize-cra": "^0.9.1",
     "less": "^3.11.1",
