--- a/package.json
+++ b/package.json
@@ -4,14 +4,27 @@
   "private": true,
   "dependencies": {
     "-": "^0.0.1",
-    "@types/react-router-dom": "^5.1.5",
+    "@reduxjs/toolkit": "^1.3.6",
     "antd": "^4.2.2",
+    "axios": "^0.19.2",
+    "firebase": "^7.14.5",
+    "notistack": "^0.9.16",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-recaptcha-v3": "^1.5.2",
+    "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.4.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.1",
+    "use-debounce": "^3.4.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -41,7 +54,9 @@
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.8",
     "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@types/react-transition-group": "^4.2.4",
     "astroturf": "^0.10.4",
     "customize-cra": "^0.9.1",
