--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "xml-js": "^1.6.11"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "set PORT=3001 && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
   },
